gcc
abb.c:9:18: fatal error: pila.h: No existe el archivo o el directorio
compilation terminated.
analog.c: In function ‘analizar_dos’:
analog.c:79:7: warning: dereferencing ‘void *’ pointer
   if((*hash_obtener(hash_ip,"dos"))==1) return true; //Cuidado si es null
       ^
analog.c:79:7: error: void value not ignored as it ought to be
analog.c:87:21: warning: dereferencing ‘void *’ pointer
    int* cont_dos = (*hash_obtener(hash_ip,"cont_dos")); 
                     ^
analog.c:87:20: error: void value not ignored as it ought to be
    int* cont_dos = (*hash_obtener(hash_ip,"cont_dos")); 
                    ^
analog.c:88:4: warning: value computed is not used [-Wunused-value]
    *(cont_dos)++;
    ^
analog.c:91:6: error: ‘dos’ undeclared (first use in this function)
     *dos = 1
      ^
analog.c:91:6: note: each undeclared identifier is reported only once for each function it appears in
analog.c:92:5: error: expected ‘;’ before ‘if’
     if(!hash_guardar(hash_ip,"dos",dos)) return false;
     ^
analog.c:94:12: warning: too many arguments for format [-Wformat-extra-args]
     printf("DoS: &s\n",ip);
            ^
analog.c:113:21: error: ‘abb_ipp’ undeclared (first use in this function)
  return abb_guardar(abb_ipp,ip,hash_ip);
                     ^
analog.c: In function ‘analizar_resources’:
analog.c:119:26: error: ‘hash’ undeclared (first use in this function)
  if((cont = hash_obtener(hash,resource))){
                          ^
analog.c: In function ‘agregar_archivo’:
analog.c:145:44: error: expected expression before ‘FILE’
  while((leidos = getline(&linea,&capacidad,FILE)) > 0){
                                            ^
analog.c:148:21: error: ‘abb_ipp’ undeclared (first use in this function)
   ok = analizar_dos(abb_ipp,strv);
                     ^
analog.c:149:27: error: ‘hash_resources’ undeclared (first use in this function)
   ok2= analizar_resources(hash_resources,strv);
                           ^
analog.c:151:2: warning: implicit declaration of function ‘destruir_strv’ [-Wimplicit-function-declaration]
  destruir_strv(strv);
  ^
analog.c:141:52: warning: variable ‘leidos’ set but not used [-Wunused-but-set-variable]
  char* linea = NULL; size_t capacidad = 0; ssize_t leidos;  //combo getline
                                                    ^
analog.c: In function ‘ver_visitantes’:
analog.c:161:2: error: unknown type name ‘iter_t’
  iter_t* iter = crear_inorder_acotado(abb_ip,inicio,final);
  ^
analog.c:161:17: warning: implicit declaration of function ‘crear_inorder_acotado’ [-Wimplicit-function-declaration]
  iter_t* iter = crear_inorder_acotado(abb_ip,inicio,final);
                 ^
analog.c:161:17: warning: initialization makes pointer from integer without a cast [-Wint-conversion]
analog.c:163:2: error: expected ‘;’ before ‘while’
  while(!abb_iter_in_al_final(iter)){
  ^
analog.c:161:10: warning: unused variable ‘iter’ [-Wunused-variable]
  iter_t* iter = crear_inorder_acotado(abb_ip,inicio,final);
          ^
analog.c: In function ‘ver_mas_visitados’:
analog.c:171:22: warning: implicit declaration of function ‘hash_iter’ [-Wimplicit-function-declaration]
  hash_iter_t* iter = hash_iter(hash_resources);
                      ^
analog.c:171:22: warning: initialization makes pointer from integer without a cast [-Wint-conversion]
analog.c:172:2: error: unknown type name ‘heap_t’
  heap_t * heap = heap_crear(cmp_heap);
  ^
analog.c:172:18: warning: implicit declaration of function ‘heap_crear’ [-Wimplicit-function-declaration]
  heap_t * heap = heap_crear(cmp_heap);
                  ^
analog.c:172:18: warning: initialization makes pointer from integer without a cast [-Wint-conversion]
analog.c:176:19: warning: assignment discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   recurso->nombre = hash_iter_ver_actual(iter);
                   ^
analog.c:177:17: warning: assignment makes integer from pointer without a cast [-Wint-conversion]
   recurso->cant = hash_obtener(hash_resources,recurso->nombre);
                 ^
analog.c:178:3: warning: implicit declaration of function ‘heap_encolar’ [-Wimplicit-function-declaration]
   heap_encolar(heap,recurso);
   ^
analog.c:184:19: warning: assignment discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   recurso->nombre = hash_iter_ver_actual(iter);
                   ^
analog.c:185:17: warning: assignment makes integer from pointer without a cast [-Wint-conversion]
   recurso->cant = hash_obtener(hash_resources,recurso->nombre);
                 ^
analog.c:186:20: warning: implicit declaration of function ‘heap_ver_max’ [-Wimplicit-function-declaration]
   if(recurso->cant>heap_ver_max(heap)){ //es ver_min
                    ^
analog.c:187:9: warning: implicit declaration of function ‘heap_desencolar’ [-Wimplicit-function-declaration]
    free(heap_desencolar(heap));
         ^
analog.c:187:9: warning: passing argument 1 of ‘free’ makes pointer from integer without a cast [-Wint-conversion]
In file included from analog.c:6:0:
/usr/include/stdlib.h:483:13: note: expected ‘void *’ but argument is of type ‘int’
 extern void free (void *__ptr) __THROW;
             ^
analog.c:194:9: warning: implicit declaration of function ‘heap_esta_vacio’ [-Wimplicit-function-declaration]
  while(!heap_esta_vacio(heap) && i<n){
         ^
analog.c:195:24: warning: initialization makes pointer from integer without a cast [-Wint-conversion]
   recurso_t* recurso = heap_desencolar(heap)
                        ^
analog.c:196:3: error: expected ‘,’ or ‘;’ before ‘printf’
   printf("\t%s - %d\n",recurso->nombre,recurso->cant);
   ^
analog.c:199:2: error: expected ‘;’ before ‘}’ token
  }
  ^
analog.c:200:2: warning: implicit declaration of function ‘heap_destruir’ [-Wimplicit-function-declaration]
  heap_destruir(heap,free); //es un simple free puesto que no quiero liberar la cadena
  ^
analog.c: In function ‘main’:
analog.c:216:28: warning: passing argument 1 of ‘abb_crear’ from incompatible pointer type [-Wincompatible-pointer-types]
  abb_t* abb_ip = abb_crear(cmp_ip,hash_destruir);
                            ^
In file included from analog.c:13:0:
abb.h:20:8: note: expected ‘abb_comparar_clave_t {aka int (*)(const char *, const char *)}’ but argument is of type ‘int (*)(char *, char *)’
 abb_t* abb_crear(abb_comparar_clave_t cmp, abb_destruir_dato_t destruir_dato);
        ^
analog.c:216:35: warning: passing argument 2 of ‘abb_crear’ from incompatible pointer type [-Wincompatible-pointer-types]
  abb_t* abb_ip = abb_crear(cmp_ip,hash_destruir);
                                   ^
In file included from analog.c:13:0:
abb.h:20:8: note: expected ‘abb_destruir_dato_t {aka void (*)(void *)}’ but argument is of type ‘void (*)(hash_t *) {aka void (*)(struct hash *)}’
 abb_t* abb_crear(abb_comparar_clave_t cmp, abb_destruir_dato_t destruir_dato);
        ^
analog.c:220:67: warning: passing argument 1 of ‘agregar_archivo’ from incompatible pointer type [-Wincompatible-pointer-types]
   if(verificar_comando(strv,2,"agregar_archivo")) agregar_archivo(abb_ip, hash_resources, strv[1]);
                                                                   ^
analog.c:134:6: note: expected ‘char *’ but argument is of type ‘abb_t * {aka struct abb *}’
 void agregar_archivo(char* file){
      ^
analog.c:220:51: error: too many arguments to function ‘agregar_archivo’
   if(verificar_comando(strv,2,"agregar_archivo")) agregar_archivo(abb_ip, hash_resources, strv[1]);
                                                   ^
analog.c:134:6: note: declared here
 void agregar_archivo(char* file){
      ^
analog.c:222:86: warning: passing argument 2 of ‘ver_mas_visitados’ makes integer from pointer without a cast [-Wint-conversion]
   if(verificar_comando(strv,2,"ver_mas_visitados")) ver_mas_visitados(hash_resources,strv[1]);
                                                                                      ^
analog.c:169:6: note: expected ‘int’ but argument is of type ‘char *’
 void ver_mas_visitados(hash_t* hash_resources,int n){
      ^
analog.c:230:2: error: expected ‘;’ before ‘return’
  return 0;
  ^
analog.c: In function ‘analizar_dos’:
analog.c:115:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
